kafka-springboot-producer/src/main/fabric8/deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: ${project.artifactId}
spec:
  template:
    spec:
      containers:
      - image: ${project.artifactId}:${project.version}
        name: ${project.artifactId}
        ports:
        - containerPort: 8010
        readinessProbe:
          tcpSocket:
            port: 8010
          initialDelaySeconds: 15
          timeoutSeconds: 2
        livelinessProbe:
          tcpSocket:
            port: 8010
          initialDelaySeconds: 15
          timeoutSeconds: 2
