kafka-springboot-producer/src/main/fabric8/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ${project.artifactId}
spec:
  ports:
    - protocol: TCP
      port: 8010
      targetPort: 8010
  type: ClusterIP
